# crustypy-instance

./: .all-contributorsrc  .cruft.json  asv.conf.json  noxfile.py  pyproject.toml
.asv/results/micael-dell/: machine.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codecov_action.yml  semantic-release.yml
benchmarks/: __init__.py  benchmarks.py
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  conf.py  index.rst  reference.md  wordlist.txt
src/crustypy_instance/: __init__.py
tests/: __init__.py  test_crustypy_instance.py
