# https://packaging.python.org/en/latest/tutorials/packaging-projects
# https://hatch.pypa.io
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crustypy-instance"
authors = [
  { name = "Micael Jarniac", email = "micael@jarniac.dev" },
]
description = "Generated with CrustyPy."
readme = "docs/README.md"
requires-python = ">=3.8"
license-files = { paths = ["LICENSE"] }
# Get more from http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "loguru >= 0.7.0",
]

[project.optional-dependencies]
# Use `constraints.txt`
tests = [
  "coverage",
  "pytest",
  "pytest-cov",
]
docs = [
  "furo",
  "myst-parser",
  "Sphinx",
  "sphinxcontrib-spelling",
]
stubs = [
  # Typing stubs go here
]
typing = [
  "crustypy-instance[stubs]",
  "mypy",
  "mypy-extensions",
  "nox",
  "pytest",
]
dev = [
  "crustypy-instance[tests,docs,stubs,typing]",
  "black",
  "build",
  "nox",
  "pre-commit",
  "python-semantic-release",
  "ruff",
  "semver",
  "toml",
]

[project.urls]
"Homepage" = "https://github.com/MicaelJarniac/crustypy-instance"
"Changelog" = "https://github.com/MicaelJarniac/crustypy-instance/blob/main/docs/CHANGELOG.md"
"Documentation" = "https://crustypy-instance.readthedocs.io"
"Repository" = "https://github.com/MicaelJarniac/crustypy-instance"
"Bug Tracker" = "https://github.com/MicaelJarniac/crustypy-instance/issues"

[tool.hatch.version]
path = "src/crustypy_instance/__init__.py"

[tool.ruff]
# https://beta.ruff.rs/docs/rules
line-length = 88  # Default
select = ["ALL"]
ignore = [
  "D203",
  "D213",
  "ANN101",
  "ANN102",
]
unfixable = ["ERA001"]
force-exclude = true
src = ["src"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 88  # Default
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | _build
)/
'''

[tool.mypy]
files = ["src", "docs", "tests", "noxfile.py"]
exclude = ["venv"]
enable_error_code = [
  "ignore-without-code"
]
strict = true
warn_unused_ignores = false  # true
show_column_numbers = true
# show_error_context = true
# pretty = true

[tool.semantic_release]
changelog_file = "docs/CHANGELOG.md"
changelog_capitalize = false
version_variable = "src/crustypy_instance/__init__.py:__version__"
build_command = "python -m build"
branch = "main"

[tool.coverage.run]
source = ["src"]
command_line = "-m pytest"

[tool.pytest.ini_options]
# addopts = "--cov"

[tool.cruft]
skip = [
  "src",
  "tests",
]
